Panorama: bugfix

Fixes char* filename conversion from and to QString
BUG: 314836